--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "mysql2": "^3.9.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -35,7 +37,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.14.2",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
